1.18.1 :O
Ported over to 1.18.1