@@ -1,39 +1,30 @@
 package com.grimbo.chipped;
 
-import com.grimbo.chipped.block.ChippedBlockTypes;
-import com.grimbo.chipped.block.ChippedBlocks;
-import com.grimbo.chipped.block.ChippedLilyPadBlock;
-import com.grimbo.chipped.container.ChippedContainer;
-import com.grimbo.chipped.container.ChippedContainerType;
-import com.grimbo.chipped.container.ChippedScreen;
+import com.grimbo.chipped.block.*;
+import com.grimbo.chipped.container.*;
 import com.grimbo.chipped.item.ChippedItems;
 import com.grimbo.chipped.recipe.ChippedSerializer;
-import net.minecraft.block.*;
-import net.minecraft.client.gui.ScreenManager;
+import net.minecraft.client.gui.screens.MenuScreens;
 import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.renderer.RenderTypeLookup;
-import net.minecraft.inventory.container.ContainerType;
-import net.minecraft.item.DyeColor;
-import net.minecraft.item.ItemGroup;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.SwordItem;
-import net.minecraft.util.Direction;
+import net.minecraft.client.renderer.ItemBlockRenderTypes;
+import net.minecraft.world.inventory.MenuType;
+import net.minecraft.world.item.*;
+import net.minecraft.world.level.block.*;
+import net.minecraft.core.Direction;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.entity.player.PlayerEvent;
 import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.RegistryObject;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
+import net.minecraftforge.registries.RegistryObject;
 import org.jetbrains.annotations.NotNull;
-
-import java.util.stream.Collectors;
 
 @Mod(Chipped.MOD_ID)
 public class Chipped {
 	public static final String MOD_ID = "chipped";
-	public static final ItemGroup CHIPPED = (new ItemGroup("chippedTab") {
+	public static final CreativeModeTab CHIPPED = (new CreativeModeTab("chippedTab") {
 		@Override
 		public @NotNull ItemStack makeIcon() {
 			return new ItemStack(ChippedBlocks.BOTANIST_WORKBENCH.get());
@@ -61,126 +52,126 @@ public class Chipped {
 
 	@SubscribeEvent
 	public void clientRender(final FMLClientSetupEvent event) {
-		RenderTypeLookup.setRenderLayer(ChippedBlocks.BOTANIST_WORKBENCH.get(), RenderType.cutout());
-		RenderTypeLookup.setRenderLayer(ChippedBlocks.LOOM_TABLE.get(), RenderType.cutout());
-		RenderTypeLookup.setRenderLayer(ChippedBlocks.ALCHEMY_BENCH.get(), RenderType.cutout());
-		RenderTypeLookup.setRenderLayer(ChippedBlocks.MECHANIST_WORKBENCH.get(), RenderType.cutout());
+		ItemBlockRenderTypes.setRenderLayer(ChippedBlocks.BOTANIST_WORKBENCH.get(), RenderType.cutout());
+		ItemBlockRenderTypes.setRenderLayer(ChippedBlocks.LOOM_TABLE.get(), RenderType.cutout());
+		ItemBlockRenderTypes.setRenderLayer(ChippedBlocks.ALCHEMY_BENCH.get(), RenderType.cutout());
+		ItemBlockRenderTypes.setRenderLayer(ChippedBlocks.MECHANIST_WORKBENCH.get(), RenderType.cutout());
 
 		for (RegistryObject<GlassBlock> glass : ChippedBlockTypes.GLASSES) {
-			RenderTypeLookup.setRenderLayer(glass.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(glass.get(), RenderType.cutout());
 		}
 
-		for (RegistryObject<PaneBlock> glassPane : ChippedBlockTypes.GLASS_PANES) {
-			RenderTypeLookup.setRenderLayer(glassPane.get(), RenderType.cutout());
+		for (RegistryObject<IronBarsBlock> glassPane : ChippedBlockTypes.GLASS_PANES) {
+			ItemBlockRenderTypes.setRenderLayer(glassPane.get(), RenderType.cutout());
 		}
 
 		for (int id = 0; id < 16; id++) {
 			DyeColor color = DyeColor.byId(id);
 			for (RegistryObject<StainedGlassBlock> stainedGlass : ChippedBlockTypes.STAINED_GLASSES.get(color)) {
-				RenderTypeLookup.setRenderLayer(stainedGlass.get(), RenderType.translucent());
+				ItemBlockRenderTypes.setRenderLayer(stainedGlass.get(), RenderType.translucent());
 			}
 
 			for (RegistryObject<StainedGlassPaneBlock> stainedGlassPane : ChippedBlockTypes.STAINED_GLASS_PANES.get(color)) {
-				RenderTypeLookup.setRenderLayer(stainedGlassPane.get(), RenderType.translucent());
+				ItemBlockRenderTypes.setRenderLayer(stainedGlassPane.get(), RenderType.translucent());
 			}
 		}
 
 		for (RegistryObject<VineBlock> vine : ChippedBlockTypes.VINES) {
-			RenderTypeLookup.setRenderLayer(vine.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(vine.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<MushroomBlock> brown_mushroom : ChippedBlockTypes.BROWN_MUSHROOMS) {
-			RenderTypeLookup.setRenderLayer(brown_mushroom.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(brown_mushroom.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<MushroomBlock> red_mushroom : ChippedBlockTypes.RED_MUSHROOMS) {
-			RenderTypeLookup.setRenderLayer(red_mushroom.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(red_mushroom.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<MushroomBlock> warped_fungus : ChippedBlockTypes.WARPED_FUNGUS) {
-			RenderTypeLookup.setRenderLayer(warped_fungus.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(warped_fungus.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<MushroomBlock> crimson_fungus : ChippedBlockTypes.CRIMSON_FUNGUS) {
-			RenderTypeLookup.setRenderLayer(crimson_fungus.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(crimson_fungus.get(), RenderType.translucent());
 		}
 
-		for (RegistryObject<NetherRootsBlock> warped_roots : ChippedBlockTypes.WARPED_ROOTS) {
-			RenderTypeLookup.setRenderLayer(warped_roots.get(), RenderType.translucent());
+		for (RegistryObject<RootsBlock> warped_roots : ChippedBlockTypes.WARPED_ROOTS) {
+			ItemBlockRenderTypes.setRenderLayer(warped_roots.get(), RenderType.translucent());
 		}
 
-		for (RegistryObject<NetherRootsBlock> crimson_roots : ChippedBlockTypes.CRIMSON_ROOTS) {
-			RenderTypeLookup.setRenderLayer(crimson_roots.get(), RenderType.translucent());
+		for (RegistryObject<RootsBlock> crimson_roots : ChippedBlockTypes.CRIMSON_ROOTS) {
+			ItemBlockRenderTypes.setRenderLayer(crimson_roots.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<NetherSproutsBlock> nether_sprouts : ChippedBlockTypes.NETHER_SPROUTS) {
-			RenderTypeLookup.setRenderLayer(nether_sprouts.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(nether_sprouts.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<ChippedLilyPadBlock> lily_pad : ChippedBlockTypes.LILY_PAD) {
-			RenderTypeLookup.setRenderLayer(lily_pad.get(), RenderType.translucent());
+			ItemBlockRenderTypes.setRenderLayer(lily_pad.get(), RenderType.translucent());
 		}
 
 		for (RegistryObject<RedstoneTorchBlock> redstoneTorch : ChippedBlockTypes.REDSTONE_TORCHES) {
-			RenderTypeLookup.setRenderLayer(redstoneTorch.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(redstoneTorch.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<RedstoneWallTorchBlock> redstoneWallTorch : ChippedBlocks.REDSTONE_WALL_TORCHES) {
-			RenderTypeLookup.setRenderLayer(redstoneWallTorch.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(redstoneWallTorch.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<WebBlock> cobweb : ChippedBlockTypes.COBWEBS) {
-			RenderTypeLookup.setRenderLayer(cobweb.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(cobweb.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<TorchBlock> torch : ChippedBlockTypes.TORCHES) {
-			RenderTypeLookup.setRenderLayer(torch.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(torch.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<WallTorchBlock> wallTorch : ChippedBlocks.WALL_TORCHES) {
-			RenderTypeLookup.setRenderLayer(wallTorch.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(wallTorch.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<Block> lantern : ChippedBlockTypes.LANTERNS) {
-			RenderTypeLookup.setRenderLayer(lantern.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(lantern.get(), RenderType.cutout());
 		}
 
 		for (RegistryObject<Block> lantern : ChippedBlockTypes.SOUL_LANTERNS) {
-			RenderTypeLookup.setRenderLayer(lantern.get(), RenderType.cutout());
+			ItemBlockRenderTypes.setRenderLayer(lantern.get(), RenderType.cutout());
 		}
 	}
 
 	@SuppressWarnings("unchecked")
 	@SubscribeEvent
 	public void onClientSetupEvent(FMLClientSetupEvent event) {
-		for (ContainerType<?> container : ChippedContainerType.CONTAINER.getEntries().stream().map(RegistryObject::get).collect(Collectors.toList())) {
-			ScreenManager.register((ContainerType<ChippedContainer>) container, ChippedScreen::new);
+		for (MenuType<?> container : ChippedContainerType.CONTAINER.getEntries().stream().map(RegistryObject::get).toList()) {
+			MenuScreens.register((MenuType<ChippedContainer>) container, ChippedScreen::new);
 		}
 	}
 
 	public static int getTorchAngleFromDir(Direction direction) {
-		switch (direction) {
+		return switch (direction) {
 			case WEST:
-				return 180;
+				yield 180;
 			case NORTH:
-				return 270;
+				yield 270;
 			case SOUTH:
-				return 90;
+				yield 90;
 			default:
-				return 0;
-		}
+				yield 0;
+		};
 	}
 
 	public static int getAngleFromDir(Direction direction) {
-		switch (direction) {
+		return switch (direction) {
 			case WEST:
-				return 270;
+				yield 270;
 			case SOUTH:
-				return 180;
+				yield 180;
 			case EAST:
-				return 90;
+				yield 90;
 			default:
-				return 0;
-		}
+				yield 0;
+		};
 	}
 }
